--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/e7bba51fc8.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./style1.scss">
     <title>Form with live Api</title>
 </head>
@@ -32,7 +32,7 @@
               <input type="text" class="form-control" id="user_address" placeholder="1234 Main St">
             </div>
             <div class="col-12">
-              <button type="submit"   class="btn btn-primary">Sign in</button>
+              <button type="submit"     class="btn btn-primary">Sign in</button>
             </div>
           </form>
           <div id="alertcontainer" class="alertcontainer">
@@ -44,7 +44,7 @@
         <div class="container">
             <div class="row">
               <div class="col-12">
-                <table class="table table-bordered">
+                <table class="table table-bordered border border-secondary" style="border-radius: 10rem;">
                   <thead>
                     <tr>
                       <th scope="col">S.No</th>
